Persona4GoldenHelper/Client/wwwroot/css/app.css
@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');


/*********
** Custom Properties
*********/
:root {
    --background-colour-dark: #121212;
    --background-colour-medium: #202020;
    --background-colour-medium-light: #242424;
    --background-colour-light: #282828;
    --background-colour-very-light: #303030;
    --background-colour-very-very-light: #404040;
    --border-medium: 1px solid #404040;
    --border-radius-medium: .3rem;
    --text-colour-primary: #c5c1b9;
    --text-colour-secondary: #808080;
    --text-colour-skill-cost-sp: #e8b819;
    --text-colour-skill-cost-hp: #f71df0;
    --text-colour-persona-type-ultimate: #4b75b3;
    --text-colour-persona-type-new-game: #b30000;
    --text-colour-shadow-type-normal: #16ce3c;
    --text-colour-shadow-type-mini-boss: #ffd700;
    --text-colour-shadow-type-boss: #b30000;
    --text-colour-element-affinity-weak: red;
    --text-colour-element-affinity-resistant: #9a10b5;
    --text-colour-element-affinity-null: dodgerblue;
    --text-colour-element-affinity-reflect: #ffd700;
    --text-colour-element-affinity-absorb: #16ce3c;
}


/*********
** Browser Styles
*********/
::selection {
    background-color: var(--text-colour-primary);
    color: var(--background-colour-light);
}

::-webkit-scrollbar {
    width: 1rem;
}

::-webkit-scrollbar-track {
    background: var(--background-colour-medium);
}

::-webkit-scrollbar-thumb {
    background: var(--background-colour-very-light);
}

    ::-webkit-scrollbar-thumb:hover {
        background: var(--background-colour-very-very-light);
    }


/*********
** Blazor styles
*********/
#blazor-error-ui {
    background: lightyellow;
    bottom: 0;
    box-shadow: 0 -1px 2px rgba(0, 0, 0, 0.2);
    display: none;
    left: 0;
    padding: 0.6rem 1.25rem 0.7rem 1.25rem;
    position: fixed;
    width: 100%;
    z-index: 1000;
}

    #blazor-error-ui .dismiss {
        cursor: pointer;
        position: absolute;
        right: 0.75rem;
        top: 0.5rem;
    }


/*********
** Tag styles
*********/
* {
    box-sizing: border-box;
}

html, body {
    font-family: 'Roboto', sans-serif;
    color: var(--text-colour-primary);
    background-color: var(--background-colour-dark);
    margin: 0;
}

h1, h2 {
    text-align: center;
    font-weight: normal;
    margin-top: 2rem;
    margin-bottom: .6rem;
}

a:link, a:visited {
    text-decoration: none;
    color: var(--text-colour-primary);
    transition: filter .5s;
}

    a:link:hover {
        filter: brightness(150%);
    }

table {
    width: 100%;
    margin-bottom: 2rem;
    border: var(--border-medium);
    border-spacing: 0; /* this is used instead of border-collapse so border-radius works correctly */
    border-radius: var(--border-radius-medium);
}

    table tbody, table tr {
        background-color: var(--background-colour-medium);
        transition: background-color .25s;
    }

        table tbody.alternate-colour:nth-child(odd),
        table tr.alternate-colour:nth-child(even) {
            background-color: var(--background-colour-medium-light);
        }

        table tbody.alternate-colour > tr {
            background-color: transparent;
        }

        table tbody:hover, table tr:hover {
            background-color: var(--background-colour-very-light) !important;
        }

    table th {
        position: sticky;
        top: -1px;
        background-color: var(--background-colour-light);
        padding: .45rem;
        text-align: left;
        font-size: 1.1rem;
    }

    table td {
        padding: .3rem .45rem;
    }

img {
    max-width: 1.6rem;
    height: auto;
    vertical-align: middle;
}


/*********
** General Styles
*********/
.text-align-centre {
    text-align: center;
}

.text-primary {
    color: var(--text-colour-primary);
}

.text-secondary {
    color: var(--text-colour-secondary);
}

.font-bold {
    font-weight: bold;
}

.white-space-pre-line {
    white-space: pre-line;
}

/* content widths */
.content-wide {
    width: 85%;
    margin: 0 auto;
}

.content-normal {
    width: 66%;
    margin: 0 auto;
}

.content-narrow {
    width: 50%;
    margin: 0 auto;
}

.content-very-narrow {
    width: 33%;
    margin: 0 auto;
}

/* table related styles */
.table-narrow {
    width: 30%;
    margin-left: auto;
    margin-right: auto;
}

.column-very-wide {
    width: 60%;
}

.column-wider {
    width: 30%;
}

.column-wide {
    width: 15%;
}

.column-slim {
    width: 8%;
}

.column-very-slim {
    width: 5%;
}

/* skill cost */
.skill-cost-sp {
    color: var(--text-colour-skill-cost-sp);
}

.skill-cost-hp {
    color: var(--text-colour-skill-cost-hp);
}

/* persona types */
.persona-type-ultimate {
    color: var(--text-colour-persona-type-ultimate) !important;
}

.persona-type-new-game {
    color: var(--text-colour-persona-type-new-game) !important;
}

/* shadow types */
.shadow-type-Normal {
    color: var(--text-colour-shadow-type-normal);
}

.shadow-type-MiniBoss {
    color: var(--text-colour-shadow-type-mini-boss);
}

.shadow-type-Boss {
    color: var(--text-colour-shadow-type-boss);
}

/* persona / shadow element affinities */
.affinity-Weak {
    color: var(--text-colour-element-affinity-weak);
}

.affinity-Resistant {
    color: var(--text-colour-element-affinity-resistant);
}

.affinity-Null {
    color: var(--text-colour-element-affinity-null);
}

.affinity-Reflect {
    color: var(--text-colour-element-affinity-reflect);
}

.affinity-Absorb {
    color: var(--text-colour-element-affinity-absorb);
}


/*********
** Components
*********/
/****
** Navbar
****/
.navbar {
    text-align: center;
    padding-top: .75rem;
}

    .navbar ul {
        margin: 0;
        padding: 0 1rem;
    }

    .navbar li {
        display: inline-block;
    }

        .navbar li a {
            display: inline-block;
            font-size: 1.1rem;
            font-weight: 500;
        }

    .navbar a {
        padding: .9rem;
    }

    .navbar .header {
        font-size: 2rem;
        font-weight: bold;
    }


/*********
** Pages
*********/
/****
** Index
****/
.sources a {
    display: block;
    text-decoration: underline;
}

